[package]
name = "gloof"
version = "0.1.0"
authors = ["Eduard-Mihai Burtescu <eddyb@lyken.rs>"]
edition = "2018"
repository = "https://github.com/eddyb/glOOF"
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
x11 = "2.18.2"
libc = "0.2.82"
derive-try-from-primitive = "1.0.0"
smallvec = "1.6.1"
indexmap = "1.6.1"
glam = "0.12.0"
